--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   "scripts": {
     "serve:dev": "yarn clean && node src/server.js",
     "dev": "nodemon",
-    "clean": "rimraf dist"
+    "clean": "rimraf .bundled"
   },
   "dependencies": {
     "koa": "^2.11.0",
     "koa-static": "^5.0.0",
-    "rollup": "^2.7.2"
+    "rollup": "^2.7.2",
+    "rollup-plugin-terser": "^5.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3",
