--- a/package.json
+++ b/package.json
@@ -8,26 +8,14 @@
   "license": "MIT",
   "scripts": {
     "serve:dev": "yarn clean && node src/server.js",
+    "svelte-server": "node svelte-server",
     "dev": "nodemon",
     "clean": "rimraf .bundled"
   },
   "dependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@rollup/plugin-node-resolve": "^7.1.3",
-    "@rollup/plugin-virtual": "^2.0.1",
-    "ejs": "^3.1.2",
-    "koa": "^2.11.0",
-    "koa-static": "^5.0.0",
-    "rollup": "^2.7.2",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-livereload": "^1.2.0",
-    "rollup-plugin-svelte": "^5.2.1",
-    "rollup-plugin-terser": "^5.3.0",
-    "svelte": "^3.21.0"
+    "svelte-server": "./svelte-server"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3",
-    "rimraf": "^3.0.2"
+    "nodemon": "^2.0.3"
   }
 }
